[tool.poetry]
name = "hello"
version = "0.1.0"
description = "that script can say 'Hello'"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.6"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
ipython = "^8.8.0"

[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
